Use a fixed width for the 'edit tags' box so that it doesn't expand too far and cause the styles dropdown to appear partially offscreen (Todo #1420)
git-svn-id: svn+ssh://svn.pgengler.net/srv/svn/personaltodo/trunk@106 abb18e54-ca02-4809-84f6-80c156c1dc92

--- a/list.css
+++ b/list.css
@@ -297,9 +297,9 @@ ul#optionslist {
 div#edittags {
 	background-color: white;
 	border: 1px solid black;
-	max-width: 15em;
-	padding: 1em;
+	padding: 0.5em;
 	position: absolute;
+	width: 8.5em;
 }
 	
 div#styles {
